Добавил контроллер сотрудника

--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -18,5 +18,6 @@
         </ul>
     </li>
     <li><a asp-controller="Home" asp-action="Index">404</a></li>
+    <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
     <li><a asp-controller="Home" asp-action="ContactUs">Связь с нами!</a></li>
 </ul>
