--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -3,21 +3,21 @@
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a asp-controller="Home" asp-action="Shop">Каталог</a></li>
-            <li><a asp-controller="Home" asp-action="ProductDetails">Подробности товара</a></li>
-            <li><a asp-controller="Home" asp-action="CheckOut">Checkout</a></li>
-            <li><a asp-controller="Home" asp-action="Cart">Cart</a></li>
-            <li><a asp-controller="Home" asp-action="Login">Login</a></li>
+            <li><a asp-controller="Shop" asp-action="ShopIndex">Каталог</a></li>
+            <li><a asp-controller="ProductDetails" asp-action="ProductDetailsIndex">Подробности товара</a></li>
+            <li><a asp-controller="CheckOut" asp-action="CheckOutIndex">Checkout</a></li>
+            <li><a asp-controller="Cart" asp-action="CartIndex">Корзина</a></li>
+            <li><a asp-controller="Login" asp-action="LoginIndex">Login</a></li>
         </ul>
     </li>
     <li class="dropdown">
-        <a asp-controller="Home" asp-action="Blogs">Блоги<i class="fa fa-angle-down"></i></a>
+        <a asp-controller="Blogs" asp-action="Index">Блоги<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a asp-controller="Home" asp-action="Blogs">Блоги покупателей</a></li>
-            <li><a asp-controller="Home" asp-action="BlogSingle">Блог магазина</a></li>
+            <li><a asp-controller="Blogs" asp-action="Index">Блоги покупателей</a></li>
+            <li><a asp-controller="Blogs" asp-action="BlogSingle">Блог магазина</a></li>
         </ul>
     </li>
     <li><a asp-controller="Home" asp-action="Index">404</a></li>
     <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
-    <li><a asp-controller="Home" asp-action="ContactUs">Связь с нами!</a></li>
+    <li><a asp-controller="ContactUs" asp-action="ContactUsIndex">Связь с нами!</a></li>
 </ul>
