--- a/WebStore/Views/Home/index.cshtml
+++ b/WebStore/Views/Home/index.cshtml
@@ -1,5 +1,7 @@
-﻿@{ 
-    Layout = "_Layout";
+﻿@{ Layout = "_Layout"; }
+
+@{
+    ViewData["Title"] = $"Магазин товаров";
 }
 
 <partial name="Partial/_Slider" />
