--- a/WebStore/Views/Employees/Delete.cshtml
+++ b/WebStore/Views/Employees/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EmployeesViewModel
 @{
-    ViewData["Title"] = $"Удаление сотрудника id:{Model.Id}";
+    ViewData["Title"] = $"Удаление сотрудника id:{Model.FirstName}";
 }
 
 <div class="container">
@@ -9,12 +9,12 @@
     <div>
         <hr />
         <dl class="row">
-            <dt class="col-sm-2">
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Id)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Id)
-            </dd>
+            </dd>*@
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.LastName)
             </dt>
@@ -42,8 +42,7 @@
         </dl>
 
         <form asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
-            <input type="submit" value="Удалить" class="btn btn-danger" /> | <a asp-action="Index">К списку</a>
+            <input type="submit" value="Удалить" class="btn btn-danger" /> | <a asp-action="Index" class="btn btn-success">К списку</a>
         </form>
     </div>
 </div>
-
