--- a/WebStore/Views/Employees/Edit.cshtml
+++ b/WebStore/Views/Employees/Edit.cshtml
@@ -1,11 +1,10 @@
 ﻿@model EmployeesViewModel
 @{ 
-    ViewData["Title"] = $"Редактирование сотрудника id:{Model.Id}";
+    ViewData["Title"] = $"Редактирование сотрудника возраста:{Model.Age}";
 }
 
 
 <div class="container">
-    <h3>@ViewData["Title"]</h3>
     <hr />
 
     <form asp-action="Edit" method="post">
