--- a/WebStore/Views/Shared/Components/Sections/Default.cshtml
+++ b/WebStore/Views/Shared/Components/Sections/Default.cshtml
@@ -22,7 +22,7 @@
                             @foreach (var child_section in parent_section.ChildItems)
                             {
                                 <li>
-                                    <a href="#">
+                                    <a asp-action="ShopIndex" asp-controller="Shop" asp-route-SectionId="@child_section.Id">
                                         @child_section.Name
                                     </a>
                                 </li>
@@ -37,7 +37,7 @@
         {
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a href="#">@parent_section.Name</a></h4>
+                    <h4 class="panel-title"><a asp-action="ShopIndex" asp-controller="Shop" asp-route-SectionId="@parent_section.Id">@parent_section.Name</a></h4>
                 </div>
             </div>
         }
