--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -3,7 +3,7 @@
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a asp-controller="Shop" asp-action="ShopIndex">Каталог</a></li>
+            <li><a asp-controller="Shop" asp-action="ShopIndex">Каталог товаров</a></li>
             <li><a asp-controller="ProductDetails" asp-action="ProductDetailsIndex">Подробности товара</a></li>
             <li><a asp-controller="CheckOut" asp-action="CheckOutIndex">Checkout</a></li>
             <li><a asp-controller="Cart" asp-action="CartIndex">Корзина</a></li>
