--- a/WebStore/Views/Shared/Components/Brands/Default.cshtml
+++ b/WebStore/Views/Shared/Components/Brands/Default.cshtml
@@ -5,9 +5,9 @@
         <h2>Бренды</h2>
         <div class="brands-name">
             <ul class="nav nav-pills nav-stacked">
-                @foreach (var brand in Model)
+                @foreach (var brand in Model.Where(x => x.ProductCount > 0))
                 {
-                    <li><a asp-action="ShopIndex" asp-controller="Shop" asp-route-BrandId="@brand.Id"> <span class="pull-right">(50)</span>@brand.Name</a></li>
+                    <li><a asp-action="ShopIndex" asp-controller="Shop" asp-route-BrandId="@brand.Id"> <span class="pull-right">(@brand.ProductCount)</span>@brand.Name</a></li>
                 }
             </ul>
         </div>
