--- a/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -60,15 +60,7 @@
                     </div>
                 </div>
                 <div class="col-sm-8">
-                    <div class="shop-menu pull-right">
-                        <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
-                            <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-                            <li><a href="~/checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                            <li><a href="~/cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a href="~/login.html"><i class="fa fa-lock"></i> Login</a></li>
-                        </ul>
-                    </div>
+                    <vc:user-info/>
                 </div>
             </div>
         </div>
