--- a/WebStore/Views/Login/Login.cshtml
+++ b/WebStore/Views/Login/Login.cshtml
@@ -1,7 +1,7 @@
-﻿@model RegisterViewModel
+﻿@model LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Вход в магазин!";
 }
 
 <h1>Login</h1>
@@ -14,11 +14,17 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Доброго пожаловать на сайт нашего магазина!</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
+                    <form asp-action="LogIn" asp-antiforgery="true">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <input asp-for="UserName" placeholder="Имя пользователя" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+
+                        <input asp-for="Password" placeholder="Пароль" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                         <span>
-                            <input type="checkbox" class="checkbox">
+                            <input asp-for="RememberMe" class="checkbox">
+                            <label asp-for="RememberMe"></label>
                             Keep me signed in
                         </span>
                         <button type="submit" class="btn btn-default">Войти</button>
