Сделал контроллер ПродуктДитэйлс

--- a/WebStore/Views/ProductDetails/ProductDetailsIndex.cshtml
+++ b/WebStore/Views/ProductDetails/ProductDetailsIndex.cshtml
@@ -76,7 +76,7 @@
                     </div>
                 </div><!--/product-details-->
 
-                <partial name="Partial/_Category" />
+                <partial name="Partial/_CategoryTab" />
                 <partial name="Partial/_RecommendedItems" />
             </div>
         </div>
