Подкорректировал настройки сервиса identity

--- a/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -3,6 +3,6 @@
         <li><a href="#"><i class="fa fa-user"></i> @User.Identity!.Name</a></li>
         <li><a href="#"><i class="fa fa-crosshairs"></i> Заказы</a></li>
         <li><a href="#"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-        <li><a asp-action="Logout" asp-controller="Login"><i class="fa fa-lock"></i> Выход</a></li>
+        <li><a asp-action="SignOutUser" asp-controller="Login"><i class="fa fa-lock"></i> Выход</a></li>
     </ul>
 </div>
