--- a/WebStore/Views/Login/SignInUser.cshtml
+++ b/WebStore/Views/Login/SignInUser.cshtml
@@ -14,7 +14,10 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Доброго пожаловать на сайт нашего магазина!</h2>
-                    <form asp-action="LogIn" asp-antiforgery="true">
+                    <form asp-action="SignInUser" asp-antiforgery="true" asp-route-ReturnUrl="@Model.ReturnUrl">
+
+                        @*@Html.HiddenFor(x => x.ReturnUrl)*@
+
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                         <input asp-for="UserName" placeholder="Имя пользователя" />
