--- a/WebStore/Views/Employees/Details.cshtml
+++ b/WebStore/Views/Employees/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Employee
+@using WebStore.Domain.Identity
 
 <div class="container">
     <h3>Сотрудник</h3>
@@ -22,11 +23,15 @@
 
     <hr />
 
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-default">
-        <i class="fa fa-edit">Редактировать</i>
-    </a>
-    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">
-        <i class="fa fa-trash-o">Удалить</i>
-    </a>
+    @if (User.IsInRole(Role.Administrator))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-default">
+            <i class="fa fa-edit">Редактировать</i>
+        </a>
+
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">
+            <i class="fa fa-trash-o">Удалить</i>
+        </a>
+    }
     <a asp-action="Index" class="btn btn-success">К списку.</a>
 </div>
