--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Employee>
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@using WebStore.Domain.Identity
 
 @{
     ViewData["Title"] = $"Сотрудники";
@@ -7,9 +7,13 @@
 
 <div class="container">
     <h3>Сотрудники</h3>
-    <div>
-        <a asp-action="Edit" class="btn btn-primary">Создать</a>
-    </div>
+
+    @if (User.IsInRole(Role.Administrator))
+    {
+        <div>
+            <a asp-action="Edit" class="btn btn-primary">Создать</a>
+        </div>
+    }
     <table class="table">
         <thead>
             <tr>
@@ -18,9 +22,12 @@
                 <th>Имя</th>
                 <th>Отчество</th>
                 <th>Возраст</th>
-                <th>Подробности</th>
-                <th>Редактировать</th>
-                <th>Удалить</th>
+                @if (User.IsInRole(Role.Administrator))
+                {
+                    <th>Подробности</th>
+                    <th>Редактировать</th>
+                    <th>Удалить</th>
+                }
             </tr>
         </thead>
         <tbody>
@@ -32,23 +39,26 @@
                     <td>@employee.FirstName</td>
                     <td>@employee.Patronymic</td>
                     <td>@employee.Age</td>
-                    <td>
-                        <a asp-action="Details" asp-route-id="@employee.Id">
-                            <i class="fa fa-info-circle"></i>
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@employee.Id">
-                            <i class="fa fa-edit"></i>
-                        </a>
-                    </td>
-                    <td>
-                        <form asp-action="Delete" asp-route-id="@employee.Id">
-                            <button type="submit" class="btn btn-danger btn-sm">
-                                <i class="fa fa-times"></i>
-                            </button>
-                        </form>
-                    </td>
+                    @if (User.IsInRole(Role.Administrator))
+                    {
+                        <td>
+                            <a asp-action="Details" asp-route-id="@employee.Id">
+                                <i class="fa fa-info-circle"></i>
+                            </a>
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@employee.Id">
+                                <i class="fa fa-edit"></i>
+                            </a>
+                        </td>
+                        <td>
+                            <form asp-action="Delete" asp-route-id="@employee.Id">
+                                <button type="submit" class="btn btn-danger btn-sm">
+                                    <i class="fa fa-times"></i>
+                                </button>
+                            </form>
+                        </td>
+                    }
                 </tr>
             }
         </tbody>
