--- a/WebStore/Views/Shared/Partial/_Styles.cshtml
+++ b/WebStore/Views/Shared/Partial/_Styles.cshtml
@@ -10,5 +10,5 @@
     <link href="~/css/responsive.css" rel="stylesheet">
 </environment>
 <environment exclude="Development">
-    <link href="~/css/site.min.css" link rel="stylesheet">
+    <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true">
 </environment>
