--- a/WebStore/Views/ProductDetails/ProductDetailsIndex.cshtml
+++ b/WebStore/Views/ProductDetails/ProductDetailsIndex.cshtml
@@ -61,7 +61,7 @@
                                 <span>@Model.Price.ToString("C")</span>
                                 <label>Количество:</label>
                                 <input type="text" value="3" />
-                                <a class="btn btn-default cart">
+                                <a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@Model.Id" class="btn btn-default cart">
                                     <i class="fa fa-shopping-cart"></i>
                                     В корзину
                                 </a>
