--- a/WebStore/Views/Shared/Partial/_CategoryTab.cshtml
+++ b/WebStore/Views/Shared/Partial/_CategoryTab.cshtml
@@ -1,5 +1,6 @@
 ﻿<div class="category-tab">
     <!--category-tab-->
+    <h2 class="title text-center">Категории товара</h2>
     <div class="col-sm-12">
         <ul class="nav nav-tabs">
             <li class="active"><a href="~/tshirt" data-toggle="tab">T-Shirt</a></li>
