--- a/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
+++ b/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
@@ -12,7 +12,7 @@
     {
         @foreach (var product in Model)
         {
-            <partial name="Partial/ProductCart" model="product"/>
+            <partial name="Partial/_ProductCart" model="product"/>
         }
     }
 
