--- a/WebStore/Areas/Admin/Views/Catalog/Index.cshtml
+++ b/WebStore/Areas/Admin/Views/Catalog/Index.cshtml
@@ -1,7 +1,39 @@
-﻿
+﻿@model IEnumerable<WebStore.Domain.Entitys.Product>
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+<table class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(product => product.Name)</th>
+            <th>@Html.DisplayNameFor(product => product.Brand)</th>
+            <th>@Html.DisplayNameFor(product => product.Section)</th>
+            <th>@Html.DisplayNameFor(product => product.ImageUrl)</th>
+            <th>@Html.DisplayNameFor(product => product.Price)</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model)
+        {
+            <tr>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@product.Id">
+                        <i class="glyphicon glyphicon-edit"></i> Ред.
+                    </a>
+                </td>
+                <td>@Html.DisplayFor(m => product.Name)</td>
+                <td>@Html.DisplayFor(m => product.Brand.Name)</td>
+                <td>@Html.DisplayFor(m => product.Section.Name)</td>
+                <td><img src="~/images/shop/@product.ImageUrl" widtd="20" alt="@product.Name" /></td>
+                <td>@Html.DisplayFor(m => product.Price)</td>
+                <td>
+                    <a asp-action="Delete" asp-route-id="@product.Id" class="text-danger">
+                        <i class="glyphicon glyphicon-remove"></i>Удал.
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
