--- a/WebStore/Views/Login/SignInUser.cshtml
+++ b/WebStore/Views/Login/SignInUser.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Вход в магазин!";
 }
 
-<h1>Login</h1>
-
 <section id="form">
     <!--form-->
     <div class="container">
@@ -13,7 +11,7 @@
             <div class="col-sm-4 col-sm-offset-1">
                 <div class="login-form">
                     <!--login form-->
-                    <h2>Доброго пожаловать на сайт нашего магазина!</h2>
+                    <h2>Добро пожаловать на сайт нашего магазина!</h2>
                     <form asp-action="SignInUser" asp-antiforgery="true" asp-route-ReturnUrl="@Model.ReturnUrl">
 
                         @*@Html.HiddenFor(x => x.ReturnUrl)*@
@@ -28,7 +26,6 @@
                         <span>
                             <input asp-for="RememberMe" class="checkbox">
                             <label asp-for="RememberMe"></label>
-                            Keep me signed in
                         </span>
                         <button type="submit" class="btn btn-default">Войти</button>
                     </form>
