--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,13 +1,13 @@
 ﻿<ul class="nav navbar-nav collapse navbar-collapse">
     <li><a asp-controller="Home" asp-action="Index" class="active">Домой</a></li>
     <li class="dropdown">
-        <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
+        <a asp-controller="Shop" asp-action="ShopIndex">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
             <li><a asp-controller="Shop" asp-action="ShopIndex">Каталог товаров</a></li>
-            <li><a asp-controller="ProductDetails" asp-action="ProductDetailsIndex">Подробности товара</a></li>
+            @*<li><a asp-controller="ProductDetails" asp-action="ProductDetailsIndex">Подробности товара</a></li>*@
             <li><a asp-controller="CheckOut" asp-action="CheckOutIndex">Checkout</a></li>
             <li><a asp-controller="Cart" asp-action="CartIndex">Корзина</a></li>
-            <li><a asp-controller="Login" asp-action="LoginIndex">Login</a></li>
+            @*<li><a asp-controller="Login" asp-action="SignInUser">LogIn</a></li>*@
         </ul>
     </li>
     <li class="dropdown">
