--- a/WebStore/Views/Shared/Partial/_ProductCart.cshtml
+++ b/WebStore/Views/Shared/Partial/_ProductCart.cshtml
@@ -15,7 +15,7 @@
                     <i class="fa fa-shopping-cart"></i>Добавить в корзину
                 </a>
             </div>
-            <div class="Model-overlay">
+            @*<div class="Model-overlay">
                 <div class="overlay-content">
                     <h2>@Model.Price.ToString("C")</h2>
                     <p>
@@ -27,7 +27,7 @@
                         <i class="fa fa-shopping-cart"></i>
                     Добавить в корзину</a>
                 </div>
-            </div>
+            </div>*@
         </div>
         <div class="choose">
             <ul class="nav nav-pills nav-justified">
