--- a/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -10,7 +10,7 @@
             </li>
 
         }
-        <li><a href="#"><i class="fa fa-user"></i> @User.Identity!.Name</a></li>
+        <li><a asp-controller="UserProfile" asp-action="Index"><i class="fa fa-user"></i> @User.Identity!.Name</a></li>
         <li><a href="#"><i class="fa fa-crosshairs"></i> Заказы</a></li>
         <li><a href="#"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
         <li><a asp-action="SignOutUser" asp-controller="Login"><i class="fa fa-lock"></i> Выход</a></li>
