--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -20,4 +20,5 @@
     <li><a asp-controller="Home" asp-action="Index">404</a></li>
     <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
     <li><a asp-controller="ContactUs" asp-action="ContactUsIndex">Связь с нами!</a></li>
+    <li><a asp-controller="WebApi" asp-action="Index">WebApi</a></li>
 </ul>
