--- a/UI/WebStore/Views/_ViewImports.cshtml
+++ b/UI/WebStore/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebStore
-@using WebStore.Domain.Models
+@using WebStore.Domain.Entitys
 @using WebStore.Domain.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
