--- a/UI/WebStore/Views/Shared/Components/Brands/Default.cshtml
+++ b/UI/WebStore/Views/Shared/Components/Brands/Default.cshtml
@@ -1,14 +1,19 @@
 ﻿@model IEnumerable<BrandViewModel>
 
-    <div class="brands_products">
-        <!--brands_products-->
-        <h2>Бренды</h2>
-        <div class="brands-name">
-            <ul class="nav nav-pills nav-stacked">
-                @foreach (var brand in Model.Where(x => x.ProductCount > 0))
-                {
-                    <li><a asp-action="ShopIndex" asp-controller="Shop" asp-route-BrandId="@brand.Id"> <span class="pull-right">(@brand.ProductCount)</span>@brand.Name</a></li>
-                }
-            </ul>
-        </div>
-    </div><!--/brands_products-->
+<div class="brands_products">
+    <!--brands_products-->
+    <h2>Бренды</h2>
+    <div class="brands-name">
+        <ul class="nav nav-pills nav-stacked">
+            @foreach (var brand in Model.Where(x => x.ProductCount > 0))
+            {
+                @(brand.Id == ViewBag.BrandId ? "class=active" : null)
+                <li>
+                    <a asp-action="ShopIndex" asp-controller="Shop" asp-route-BrandId="@brand.Id">
+                        <span class="pull-right">(@brand.ProductCount)</span>@brand.Name
+                    </a>
+                </li>
+            }
+        </ul>
+    </div>
+</div><!--/brands_products-->
