--- a/UI/WebStore/Views/Shared/Partial/_LeftSideBar.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_LeftSideBar.cshtml
@@ -2,9 +2,9 @@
     @*@Component.InvokeAsync("Sections");
     @Component.InvokeAsync("Brands");*@
 
-    <vc:sections />
+    <vc:sections section-id="@Context.Request.Query["SectionId"]"/>
 
-    <vc:brands />
+    <vc:brands brand-id="@Context.Request.Query["BrandId"]"/>
 
     <div class="price-range">
         <!--price-range-->
