--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,9 +1,9 @@
 ﻿<ul class="nav navbar-nav collapse navbar-collapse">
-    <li><a asp-controller="Home" asp-action="Index" class="active">Домой</a></li>
+    <li><a is-active-route asp-controller="Home" asp-action="Index">Домой</a></li>
     <li class="dropdown">
-        <a asp-controller="Shop" asp-action="ShopIndex">Магазин<i class="fa fa-angle-down"></i></a>
+        <a ws-is-avtive-route ws-ignore-action asp-controller="Shop" asp-action="ShopIndex">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a asp-controller="Shop" asp-action="ShopIndex">Каталог товаров</a></li>
+            <li><a ws-is-avtive-route asp-controller="Shop" asp-action="ShopIndex">Каталог товаров</a></li>
             @*<li><a asp-controller="ProductDetails" asp-action="ProductDetailsIndex">Подробности товара</a></li>*@
             <li><a asp-controller="CheckOut" asp-action="CheckOutIndex">Checkout</a></li>
             <li><a asp-controller="Cart" asp-action="CartIndex">Корзина</a></li>
@@ -17,8 +17,17 @@
             <li><a asp-controller="Blogs" asp-action="BlogSingle">Блог магазина</a></li>
         </ul>
     </li>
-    <li><a asp-controller="Home" asp-action="Index">404</a></li>
-    <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
-    <li><a asp-controller="ContactUs" asp-action="ContactUsIndex">Связь с нами!</a></li>
-    <li><a asp-controller="WebApi" asp-action="Index">WebApi</a></li>
+    <li><a is-active-route asp-controller="Home" asp-action="Index">404</a></li>
+    <li><a is-active-route asp-controller="Employees" asp-action="Index" class=@IsActive("Employees")>Сотрудники</a></li>
+    <li><a is-active-route asp-controller="ContactUs" asp-action="ContactUsIndex">Связь с нами!</a></li>
+    <li><a ws-is-active-route asp-controller="WebApi" asp-action="Index">WebApi</a></li>
 </ul>
+
+@functions
+{
+    string IsActive(string Controller, string Action = "Index") =>
+        Equals(Controller, ViewContext.RouteData.Values["Controller"])
+        && Equals(Action, ViewContext.RouteData.Values["Action"])
+        ? "active"
+        : null;
+}
