--- a/UI/WebStore/Views/Shared/Components/UserInfo/Default.cshtml
+++ b/UI/WebStore/Views/Shared/Components/UserInfo/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="shop-menu pull-right">
     <ul class="nav navbar-nav">
-        <li><a href="#"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+        <li><a asp-action="CartIndex" asp-controller="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
         <li><a asp-action="Register" asp-controller="Login"><i class="fa fa-lock"></i> Регистрация</a></li>
         <li><a asp-action="SignInUser" asp-controller="Login"><i class="fa fa-lock"></i> Вход</a></li>
     </ul>
