--- a/UI/WebStore/Views/Shared/Partial/_ProductCart.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_ProductCart.cshtml
@@ -7,7 +7,11 @@
                 <img src="~/images/shop/@Model.ImageUrl" alt="" />
                 <h2>@Model.Price.ToString("C")</h2>
                 <p>
-                    <a asp-action="ProductDetailsIndex" asp-controller="ProductDetails" asp-route-id="@Model.Id">
+                    <a asp-action="ProductDetailsIndex" 
+                       asp-controller="ProductDetails" 
+                       asp-route-id="@Model.Id"
+                       asp-route-SectionId="@Context.Request.Query["SectionId"]"
+                       asp-route-BrandId="@Context.Request.Query["BrandId"]">
                         @Model.Name
                     </a>
                 </p>
