--- a/UI/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/UI/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -12,7 +12,7 @@
         }
         <li><a asp-controller="UserProfile" asp-action="Index"><i class="fa fa-user"></i> @User.Identity!.Name</a></li>
         <li><a href="#"><i class="fa fa-crosshairs"></i> Заказы</a></li>
-        <li><a asp-action="CartIndex" asp-controller="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+        <li id="cart-container"><vc:cart/></li>
         <li><a asp-action="SignOutUser" asp-controller="Login"><i class="fa fa-lock"></i> Выход</a></li>
     </ul>
 </div>
