исправил скрипт, подключил скрипты

--- a/UI/WebStore/Views/Shared/_Layout.cshtml
+++ b/UI/WebStore/Views/Shared/_Layout.cshtml
@@ -24,5 +24,7 @@
     <partial name="Partial/_Footer" />
 
     <partial name="Partial/_Styles" />
+
+    <partial name="Partial/_Scripts"/>
 </body>
 </html>
