--- a/UI/WebStore/Views/Shared/Partial/_ProductCart.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_ProductCart.cshtml
@@ -7,31 +7,42 @@
                 <img src="~/images/shop/@Model.ImageUrl" alt="" />
                 <h2>@Model.Price.ToString("C")</h2>
                 <p>
-                    <a asp-action="ProductDetailsIndex" 
-                       asp-controller="ProductDetails" 
+                    <a asp-action="ProductDetailsIndex"
+                       asp-controller="ProductDetails"
                        asp-route-id="@Model.Id"
                        asp-route-SectionId="@Context.Request.Query["SectionId"]"
                        asp-route-BrandId="@Context.Request.Query["BrandId"]">
                         @Model.Name
                     </a>
                 </p>
-                <a asp-action="AddToCart" asp-controller="Cart" asp-route-Id="@Model.Id" class="btn btn-default add-to-cart">
+                <a asp-action="AddToCart" asp-controller="Cart" asp-route-Id="@Model.Id"
+                   data-id="@Model.Id"
+                   class="btn btn-default add-to-cart">
                     <i class="fa fa-shopping-cart"></i>Добавить в корзину
                 </a>
             </div>
-            @*<div class="Model-overlay">
+            <div class="product-overlay">
                 <div class="overlay-content">
                     <h2>@Model.Price.ToString("C")</h2>
                     <p>
-                        <a asp-action="ProductDetailsIndex" asp-controller="ProductDetails" asp-route-id="@Model.Id">
+                        <a asp-action="ProductDetailsIndex"
+                           asp-controller="ProductDetails"
+                           asp-route-id="@Model.Id"
+                           asp-route-SectionId="@Context.Request.Query["SectionId"]"
+                           asp-route-BrandId="@Context.Request.Query["BrandId"]">
                             @Model.Name
                         </a>
                     </p>
-                    <a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@Model.Id" class="btn btn-default add-to-cart">
+                    <a asp-action="AddToCart"
+                       asp-controller="Cart"
+                       asp-route-id="@Model.Id"
+                       data-id="@Model.Id"
+                       class="btn btn-default add-to-cart">
                         <i class="fa fa-shopping-cart"></i>
-                    Добавить в корзину</a>
+                        Добавить в корзину
+                    </a>
                 </div>
-            </div>*@
+            </div>
         </div>
         <div class="choose">
             <ul class="nav nav-pills nav-justified">
