Логика скрипта доделана

--- a/UI/WebStore/Views/Shared/Partial/_Scripts.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Scripts.cshtml
@@ -19,6 +19,8 @@
         Cart.init({
             getCartViewLink: "@Url.Action("GetCartView", "Cart")",
             addToCartLink: "@Url.Action("AddToCartAPI", "Cart")",
+            decrementLink: "@Url.Action("DecrementFromCartAPI", "Cart")",
+            removeFromCartLinkLink: "@Url.Action("RemoveFromCartAPI", "Cart")",
         })
     })
 </script>
