--- a/UI/WebStore/Views/Cart/CartIndex.cshtml
+++ b/UI/WebStore/Views/Cart/CartIndex.cshtml
@@ -19,32 +19,40 @@
                 <tbody>
                     @foreach (var (product, quatity) in Model.Cart.Items)
                     {
-        <tr>
-            <td class="cart_product">
-                <a href=""><img src="~/images/shop/@product.ImageUrl" alt=""></a>
-            </td>
-            <td class="cart_description">
-                <h4><a href="">@product.Name</a></h4>
-                <p>Web ID: @product.Id.ToString("00000000")</p>
-            </td>
-            <td class="cart_price">
-                <p>@product.Price.ToString("C")</p>
-            </td>
-            <td class="cart_quantity">
-                <div class="cart_quantity_button">
-                    <a asp-action="AddToCart" asp-controller="Cart" asp-route-Id="@product.Id" class="cart_quantity_up"> + </a>
-                    <input class="cart_quantity_input" type="text" name="quantity" value="@quatity" autocomplete="off" size="2">
-                    <a asp-action="DecrementFromCart" asp-controller="Cart" asp-route-Id="@product.Id" class="cart_quantity_down"> - </a>
-                </div>
-            </td>
-            <td class="cart_total">
-                <p class="cart_total_price">@((product.Price * quatity).ToString("C"))</p>
-            </td>
-            <td class="cart_delete" align="center">
-                <a asp-action="RemoveFromCart" asp-controller="Cart" asp-route-Id="@product.Id" class="cart_quantity_delete"><i class="fa fa-times btn-group-lg"></i></a>
-            </td>
-        </tr>
-}
+                        <tr>
+                            <td class="cart_product">
+                                <a href=""><img src="~/images/shop/@product.ImageUrl" alt=""></a>
+                            </td>
+                            <td class="cart_description">
+                                <h4><a href="">@product.Name</a></h4>
+                                <p>Web ID: @product.Id.ToString("00000000")</p>
+                            </td>
+                            <td class="cart_price" data-price="@product.Price">
+                                <p>@product.Price.ToString("C")</p>
+                            </td>
+                            <td class="cart_quantity">
+                                <div class="cart_quantity_button">
+                                    <a asp-action="AddToCart" asp-controller="Cart" asp-route-Id="@product.Id" 
+                                       data-id="@product.Id"
+                                       class="cart_quantity_up">
+                                        +
+                                    </a>
+                                    <input class="cart_quantity_input" type="text" name="quantity" value="@quatity" autocomplete="off" size="2">
+                                    <a asp-action="DecrementFromCart" asp-controller="Cart" asp-route-Id="@product.Id" 
+                                       data-id="@product.Id"
+                                       class="cart_quantity_down">
+                                        -
+                                    </a>
+                                </div>
+                            </td>
+                            <td class="cart_total" data-price="@(product.Price * quatity)">
+                                <p class="cart_total_price">@((product.Price * quatity).ToString("C"))</p>
+                            </td>
+                            <td class="cart_delete" align="center">
+                                <a asp-action="RemoveFromCart" asp-controller="Cart" asp-route-Id="@product.Id" class="cart_quantity_delete"><i class="fa fa-times btn-group-lg"></i></a>
+                            </td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
