--- a/UI/WebStore/Views/Home/index.cshtml
+++ b/UI/WebStore/Views/Home/index.cshtml
@@ -3,6 +3,7 @@
 @{ 
     var products = ProductData
         .GetProducts()
+        .Products
         .OrderBy(x => x.Order)
         .Take(6)
         .Select(x => new ProductViewModel
