--- a/UI/WebStore/Views/Shop/ShopIndex.cshtml
+++ b/UI/WebStore/Views/Shop/ShopIndex.cshtml
@@ -22,6 +22,13 @@
 
             <div class="col-sm-9 padding-right">
                 <partial name="Partial/_FeaturesItems" model="@Model.Product"/>
+
+                <paging page-model="Model.PageViewModel"
+                        page-action="ShopIndex"
+                        page-url-SectionID="@Model.SectionId"
+                        page-url-BrandId="@Model.BrandId"
+                        page-url-PageSize="@Context.Request.Query["PageSize"]">
+                </paging>
             </div>
         </div>
     </div>
