--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -20,7 +20,13 @@
     <li><a ws-is-active-route asp-controller="Home" asp-action="Error404">404</a></li>
     <li><a asp-controller="Employees" asp-action="Index" class=@IsActive("Employees")>Сотрудники</a></li>
     <li><a ws-is-active-route asp-controller="ContactUs" asp-action="ContactUsIndex">Связь с нами!</a></li>
-    <li><a ws-is-active-route asp-controller="WebApi" asp-action="Index">WebApi</a></li>
+    <li class="dropdown">
+        <a ws-is-active-route href="#">Tests<i class="fa fa-angle-down"></i></a>
+        <ul role="menu" class="sub-menu">
+            <li><a ws-is-active-route asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
+            <li><a ws-is-active-route asp-controller="AjaxTest" asp-action="Index">AjaxTest</a></li>
+        </ul>
+    </li>
 </ul>
 
 @functions
