--- a/UI/WebStore/Views/Shared/_Layout.cshtml
+++ b/UI/WebStore/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="~/images/ico/apple-touch-icon-57-precomposed.png">
+
+    @await RenderSectionAsync("Styles", false);
 </head><!--/head-->
 
 <body>
@@ -26,5 +28,7 @@
     <partial name="Partial/_Styles" />
 
     <partial name="Partial/_Scripts"/>
+
+    @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
